--- a/Rank/WideDeep/Wide&Deep Model.ipynb
+++ b/Rank/WideDeep/Wide&Deep Model.ipynb
@@ -10,26 +10,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-30T03:28:57.522823Z",
      "start_time": "2020-11-30T03:28:55.793448Z"
     }
    },
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'Model' from 'torchkeras' (d:\\Anaconda3\\Lib\\site-packages\\torchkeras\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[9], line 13\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mnn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mfunctional\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mF\u001b[39;00m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mtorch\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01moptim\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01moptim\u001b[39;00m\n\u001b[1;32m---> 13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtorchkeras\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m summary, Model\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mmetrics\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m roc_auc_score\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mwarnings\u001b[39;00m\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'Model' from 'torchkeras' (d:\\Anaconda3\\Lib\\site-packages\\torchkeras\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -43,7 +31,7 @@
     "import torch.nn.functional as F\n",
     "import torch.optim as optim\n",
     "\n",
-    "from torchkeras import summary, Model\n",
+    "from torchkeras import summary\n",
     "\n",
     "from sklearn.metrics import roc_auc_score\n",
     "\n",
@@ -463,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-30T03:29:06.013125Z",
@@ -476,22 +464,88 @@
      "output_type": "stream",
      "text": [
       "start_training.........\n",
-      "================================================================2025-10-27 16:20:20\n"
-     ]
-    },
-    {
-     "ename": "ValueError",
-     "evalue": "Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])) is deprecated. Please ensure they have the same size.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[17], line 25\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[38;5;66;03m# 正向传播\u001b[39;00m\n\u001b[0;32m     24\u001b[0m predictions \u001b[38;5;241m=\u001b[39m model(features)\n\u001b[1;32m---> 25\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(predictions, labels)\n\u001b[0;32m     26\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m     27\u001b[0m     metric \u001b[38;5;241m=\u001b[39m metric_func(predictions, labels)\n",
-      "File \u001b[1;32md:\\Anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1751\u001b[0m, in \u001b[0;36mModule._wrapped_call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1749\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_compiled_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)  \u001b[38;5;66;03m# type: ignore[misc]\u001b[39;00m\n\u001b[0;32m   1750\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m-> 1751\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_call_impl(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n",
-      "File \u001b[1;32md:\\Anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\module.py:1762\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   1757\u001b[0m \u001b[38;5;66;03m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[0;32m   1758\u001b[0m \u001b[38;5;66;03m# this function, and just call forward.\u001b[39;00m\n\u001b[0;32m   1759\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m (\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_forward_pre_hooks\n\u001b[0;32m   1760\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_backward_pre_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_backward_hooks\n\u001b[0;32m   1761\u001b[0m         \u001b[38;5;129;01mor\u001b[39;00m _global_forward_hooks \u001b[38;5;129;01mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[1;32m-> 1762\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m forward_call(\u001b[38;5;241m*\u001b[39margs, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39mkwargs)\n\u001b[0;32m   1764\u001b[0m result \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[0;32m   1765\u001b[0m called_always_called_hooks \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mset\u001b[39m()\n",
-      "File \u001b[1;32md:\\Anaconda3\\Lib\\site-packages\\torch\\nn\\modules\\loss.py:699\u001b[0m, in \u001b[0;36mBCELoss.forward\u001b[1;34m(self, input, target)\u001b[0m\n\u001b[0;32m    698\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mforward\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28minput\u001b[39m: Tensor, target: Tensor) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Tensor:\n\u001b[1;32m--> 699\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m F\u001b[38;5;241m.\u001b[39mbinary_cross_entropy(\n\u001b[0;32m    700\u001b[0m         \u001b[38;5;28minput\u001b[39m, target, weight\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mweight, reduction\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mreduction\n\u001b[0;32m    701\u001b[0m     )\n",
-      "File \u001b[1;32md:\\Anaconda3\\Lib\\site-packages\\torch\\nn\\functional.py:3560\u001b[0m, in \u001b[0;36mbinary_cross_entropy\u001b[1;34m(input, target, weight, size_average, reduce, reduction)\u001b[0m\n\u001b[0;32m   3558\u001b[0m     reduction_enum \u001b[38;5;241m=\u001b[39m _Reduction\u001b[38;5;241m.\u001b[39mget_enum(reduction)\n\u001b[0;32m   3559\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m target\u001b[38;5;241m.\u001b[39msize() \u001b[38;5;241m!=\u001b[39m \u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msize():\n\u001b[1;32m-> 3560\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[0;32m   3561\u001b[0m         \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUsing a target size (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtarget\u001b[38;5;241m.\u001b[39msize()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) that is different to the input size (\u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[38;5;28minput\u001b[39m\u001b[38;5;241m.\u001b[39msize()\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m) is deprecated. \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   3562\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mPlease ensure they have the same size.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m   3563\u001b[0m     )\n\u001b[0;32m   3565\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m weight \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m   3566\u001b[0m     new_size \u001b[38;5;241m=\u001b[39m _infer_size(target\u001b[38;5;241m.\u001b[39msize(), weight\u001b[38;5;241m.\u001b[39msize())\n",
-      "\u001b[1;31mValueError\u001b[0m: Using a target size (torch.Size([32])) that is different to the input size (torch.Size([32, 1])) is deprecated. Please ensure they have the same size."
+      "================================================================2025-10-27 16:35:24\n",
+      "[step=10] loss: 0.440, auc: 0.701\n",
+      "[step=20] loss: 0.481, auc: 0.721\n",
+      "[step=30] loss: 0.481, auc: 0.727\n",
+      "[step=40] loss: 0.483, auc: 0.734\n",
+      "\n",
+      "EPOCH=1, loss=0.483, auc = 0.734, val_loss=0.440, val_auc = 0.630\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:25\n",
+      "[step=10] loss: 0.434, auc: 0.809\n",
+      "[step=20] loss: 0.448, auc: 0.796\n",
+      "[step=30] loss: 0.427, auc: 0.821\n",
+      "[step=40] loss: 0.436, auc: 0.815\n",
+      "\n",
+      "EPOCH=2, loss=0.436, auc = 0.815, val_loss=0.457, val_auc = 0.622\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:25\n",
+      "[step=10] loss: 0.347, auc: 0.899\n",
+      "[step=20] loss: 0.363, auc: 0.889\n",
+      "[step=30] loss: 0.360, auc: 0.886\n",
+      "[step=40] loss: 0.365, auc: 0.878\n",
+      "\n",
+      "EPOCH=3, loss=0.365, auc = 0.878, val_loss=0.491, val_auc = 0.616\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:26\n",
+      "[step=10] loss: 0.263, auc: 0.970\n",
+      "[step=20] loss: 0.266, auc: 0.965\n",
+      "[step=30] loss: 0.237, auc: 0.968\n",
+      "[step=40] loss: 0.240, auc: 0.966\n",
+      "\n",
+      "EPOCH=4, loss=0.240, auc = 0.966, val_loss=0.691, val_auc = 0.606\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:26\n",
+      "[step=10] loss: 0.095, auc: 0.997\n",
+      "[step=20] loss: 0.101, auc: 0.995\n",
+      "[step=30] loss: 0.100, auc: 0.995\n",
+      "[step=40] loss: 0.098, auc: 0.994\n",
+      "\n",
+      "EPOCH=5, loss=0.098, auc = 0.994, val_loss=0.872, val_auc = 0.616\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:27\n",
+      "[step=10] loss: 0.039, auc: 0.996\n",
+      "[step=20] loss: 0.045, auc: 0.998\n",
+      "[step=30] loss: 0.045, auc: 0.998\n",
+      "[step=40] loss: 0.043, auc: 0.999\n",
+      "\n",
+      "EPOCH=6, loss=0.043, auc = 0.999, val_loss=1.045, val_auc = 0.623\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:28\n",
+      "[step=10] loss: 0.045, auc: 0.999\n",
+      "[step=20] loss: 0.040, auc: 0.999\n",
+      "[step=30] loss: 0.038, auc: 0.999\n",
+      "[step=40] loss: 0.041, auc: 0.999\n",
+      "\n",
+      "EPOCH=7, loss=0.041, auc = 0.999, val_loss=1.236, val_auc = 0.613\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:29\n",
+      "[step=10] loss: 0.019, auc: 1.000\n",
+      "[step=20] loss: 0.017, auc: 1.000\n",
+      "[step=30] loss: 0.017, auc: 1.000\n",
+      "[step=40] loss: 0.014, auc: 1.000\n",
+      "\n",
+      "EPOCH=8, loss=0.014, auc = 1.000, val_loss=1.291, val_auc = 0.617\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:30\n",
+      "[step=10] loss: 0.003, auc: 1.000\n",
+      "[step=20] loss: 0.003, auc: 1.000\n",
+      "[step=30] loss: 0.005, auc: 1.000\n",
+      "[step=40] loss: 0.006, auc: 1.000\n",
+      "\n",
+      "EPOCH=9, loss=0.006, auc = 1.000, val_loss=1.459, val_auc = 0.592\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:31\n",
+      "[step=10] loss: 0.012, auc: 1.000\n",
+      "[step=20] loss: 0.011, auc: 1.000\n",
+      "[step=30] loss: 0.008, auc: 1.000\n",
+      "[step=40] loss: 0.006, auc: 1.000\n",
+      "\n",
+      "EPOCH=10, loss=0.006, auc = 1.000, val_loss=1.463, val_auc = 0.609\n",
+      "\n",
+      "================================================================================2025-10-27 16:35:32\n",
+      "Finished Training\n"
      ]
     }
    ],
@@ -520,6 +574,8 @@
     "        \n",
     "        # 正向传播\n",
     "        predictions = model(features)\n",
+    "        predictions = predictions.squeeze()  # 从 [32, 1] 变为 [32]\n",
+    "        labels = labels.float()              # 确保标签是float类型\n",
     "        loss = loss_func(predictions, labels)\n",
     "        try:\n",
     "            metric = metric_func(predictions, labels)\n",
@@ -545,6 +601,8 @@
     "    for val_step, (features, labels) in enumerate(dl_val, 1):\n",
     "        with torch.no_grad():\n",
     "            predictions = model(features)\n",
+    "            predictions = predictions.squeeze()  # 从 [32, 1] 变为 [32]\n",
+    "            labels = labels.float()              # 确保标签是float类型\n",
     "            val_loss = loss_func(predictions, labels)\n",
     "            try:\n",
     "                val_metric = metric_func(predictions, labels)\n",
