remodify the import&train operations

--- a/Rank/WideDeep/Wide&Deep Model.ipynb
+++ b/Rank/WideDeep/Wide&Deep Model.ipynb
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2020-11-30T03:29:06.013125Z",
@@ -563,7 +563,7 @@
     "for epoch in range(1, epochs+1):\n",
     "    \n",
     "    # 训练阶段\n",
-    "    model.train() # 设置模型为训练模式\n",
+    "    model.train() # 设置模型为训练模式,对应的还有model.eval\n",
     "    loss_sum = 0.0\n",
     "    metric_sum = 0.0\n",
     "    step = 1\n",
